# Next-Generation-Gamma-Ray-Telescope

./: .gitignore  CMakeLists.txt  Filter-Design.py  Main.cc  README.md  exampleB1.cc  requirements.txt  setup_env.sh  setup_tex.sh  vis.mac
analysis/: AR-Coating-Optimization.py  Filter-Design.py  acd_veto_scan.py  angular_resolution.py  background_rejection.py  common.py  density_maps.py  effective_area.py  effective_area_scan.py  energy_calibration.py  energy_resolution.py  energy_resolution_filter_compare.py  filter_folding.py  peak_factor_stats.py  run_all.py  saturation.py  shower_length.py
data/: angle_scan_run0_meta.json  angle_scan_run1_meta.json  direction_scan_run0_meta.json  direction_scan_run10_meta.json  direction_scan_run11_meta.json  direction_scan_run12_meta.json  direction_scan_run13_meta.json  direction_scan_run14_meta.json  direction_scan_run15_meta.json  direction_scan_run16_meta.json  direction_scan_run17_meta.json  direction_scan_run1_meta.json  direction_scan_run2_meta.json  direction_scan_run3_meta.json  direction_scan_run4_meta.json  direction_scan_run5_meta.json  direction_scan_run6_meta.json  direction_scan_run7_meta.json  direction_scan_run8_meta.json  direction_scan_run9_meta.json  energy_resolution_100_off_run0_meta.json  energy_resolution_100_on_run0_meta.json  energy_resolution_215_off_run0_meta.json  energy_resolution_215_on_run0_meta.json  energy_resolution_run0_meta.json  energy_scan_on_run0_meta.json  energy_scan_on_run1_meta.json  energy_scan_on_run2_meta.json  energy_scan_on_run3_meta.json  energy_scan_run0_meta.json  (+15 more)
src/: ACDSD.cc  (+12 more)
(+107 files in other folders)
